objects/gvp__Settings_Find_Accounts__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for controlling UI elements within the &quot;Find Accounts&quot; Visualforce page</description>
    <fields>
        <fullName>gvp__Display_Account_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Display Account Hierarchy drop-down on the &quot;Find Accounts&quot; Visualforce page</description>
        <inlineHelpText>Display Account Hierarchy drop-down on the &quot;Find Accounts&quot; Visualforce page</inlineHelpText>
        <label>Display Account Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Account_Objective_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display hard-coded account objective fields on &quot;Find Accounts&quot; Visualforce page</description>
        <inlineHelpText>Display hard-coded account objective fields on &quot;Find Accounts&quot; Visualforce page</inlineHelpText>
        <label>Display Account Objective Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Account_Team_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display hard-coded account team fields on &quot;Find Accounts&quot; Visualforce page</description>
        <inlineHelpText>Display hard-coded account team fields on &quot;Find Accounts&quot; Visualforce page</inlineHelpText>
        <label>Display Account Team Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Activity_Since_Field__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display hard-coded &quot;Activity Since&quot; field on &quot;Find Accounts&quot; Visualforce page</description>
        <inlineHelpText>Display hard-coded &quot;Activity Since&quot; field on &quot;Find Accounts&quot; Visualforce page</inlineHelpText>
        <label>Display Activity Since Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Survey_Fields__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Display hard-coded survey fields on &quot;Find Accounts&quot; Visualforce page</description>
        <inlineHelpText>Display hard-coded survey fields on &quot;Find Accounts&quot; Visualforce page</inlineHelpText>
        <label>Display Survey Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Account_Team_Custom_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the Account Team - Custom 1 drop-down on the &quot;Find Accounts&quot; visualforce page</description>
        <inlineHelpText>Show the Account Team - Custom 1 drop-down on the &quot;Find Accounts&quot; visualforce page</inlineHelpText>
        <label>Show Account Team Custom 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Account_Team_Custom_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the Account Team - Custom 2 drop-down on the &quot;Find Accounts&quot; visualforce page</description>
        <inlineHelpText>Show the Account Team - Custom 2 drop-down on the &quot;Find Accounts&quot; visualforce page</inlineHelpText>
        <label>Show Account Team Custom 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Account_Team_Custom_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the Account Team - Custom 3 drop-down on the &quot;Find Accounts&quot; visualforce page</description>
        <inlineHelpText>Show the Account Team - Custom 3 drop-down on the &quot;Find Accounts&quot; visualforce page</inlineHelpText>
        <label>Show Account Team Custom 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Manager_1_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the manager 1 drop-down on the &quot;Find Accounts&quot; visualforce page</description>
        <inlineHelpText>Show the manager 1 drop-down on the &quot;Find Accounts&quot; visualforce page</inlineHelpText>
        <label>Show Manager 1 Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Manager_2_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the manager 2 drop-down on the &quot;Find Accounts&quot; visualforce page</description>
        <inlineHelpText>Show the manager 2 drop-down on the &quot;Find Accounts&quot; visualforce page</inlineHelpText>
        <label>Show Manager 2 Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Show_Manager_3_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the manager 3 drop-down on the &quot;Find Accounts&quot; visualforce page</description>
        <inlineHelpText>Show the manager 3 drop-down on the &quot;Find Accounts&quot; visualforce page</inlineHelpText>
        <label>Show Manager 3 Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <label>Find Accounts Settings</label>
</CustomObject>